specify icon's weight and size

--- a/src/app/index.postcss
+++ b/src/app/index.postcss
@@ -1,1 +1,9 @@
 @tailwind utilities;
+
+.material-symbols-outlined {
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 40;
+}
