add global styles for scrollbar

--- a/src/app/index.postcss
+++ b/src/app/index.postcss
@@ -7,3 +7,15 @@
     "GRAD" 0,
     "opsz" 40;
 }
+
+:root::-webkit-scrollbar {
+  @apply w-2 rounded-md border border-solid bg-white/40;
+}
+
+:root::-webkit-scrollbar-track {
+  @apply rounded-md border border-solid bg-white/40;
+}
+
+:root::-webkit-scrollbar-thumb {
+  @apply rounded-md border border-solid border-[#191919] bg-[#111];
+}
