styling root scrollbar

--- a/src/app/index.postcss
+++ b/src/app/index.postcss
@@ -9,13 +9,13 @@
 }
 
 :root::-webkit-scrollbar {
-  @apply w-2 rounded-md border border-solid bg-white/40;
+  @apply w-2 bg-transparent;
 }
 
 :root::-webkit-scrollbar-track {
-  @apply rounded-md border border-solid bg-white/40;
+  @apply bg-transparent;
 }
 
 :root::-webkit-scrollbar-thumb {
-  @apply rounded-md border border-solid border-[#191919] bg-[#111];
+  @apply rounded-md bg-black/50 dark:bg-white/50;
 }
